--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,47 @@
-body {
+*{
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
+  transition: all 0.2s ease;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+a{
+  text-decoration: none;
+  color:#fff
+  
+}
+
+#btn {
+  border-radius: 20px;
+}
+#link {
+  transition: all 0.3s ease ;
+}
+#link:hover{
+  transform: translateX(5px);
+  text-decoration: underline; 
+}
+#price{
+  color: #4585b0;
+}
+/* #About{
+  transition: all 0.3s ease ;
+}
+#About:hover{
+  transform: translateX(5px);
+} */
+#span{
+  font-weight: lighter
+}
+
+#input{
+ max-width: 50px;
+ outline: none;
+ border-radius: 20px;
+ border: 2px solid #dbd7d3;
+ text-align: center;
+}
+
+#input:hover{
+  border: 1px solid #000;
 }
